Setting up validation form for the email.
-Added message error.
-Added the script for this message.

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
           <button type="submit" class="contact-button">Start collaboration</button>
         </li>
       </ul>
+      <p id="error-message">Email should be in lower case.</p>
     </form>
   </section>
   <footer class="links">
