Finished email validation

--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
       <li class="dotsquare"></li>
     </ul>
   </section>
-  <section class="contactform" id="contact">
+  <section class="contactform">
     <section class="contactheadline">
       <a href="index.html"><img class="toolbar2" src="img/shapeheader.png" alt="Redirect Home"></a>
       <h1>Get Started</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
     </section>
-    <form action="https://formspree.io/f/xgedlyrb " method="post">
+    <form action="https://formspree.io/f/xgedlyrb " method="post" id="contact">
       <ul class="submitform">
         <li class="nameform">
           <label for="first_name"> Your Name</label>
