Update error message.

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <button type="submit" class="contact-button">Start collaboration</button>
         </li>
       </ul>
-      <p id="error-message">Email should be in lower case.</p>
+      <p id="error-message">Please add your e-mail in lower case to submit.</p>
     </form>
   </section>
   <footer class="links">
