--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <ul class="submitform">
         <li class="nameform">
           <label for="first_name"> Your Name</label>
-          <input type="text" id="first_name" name="user_name" maxlength="30" placeholder="First name, Last name" required>
+          <input type="text" id="first-name" name="user_name" maxlength="30" placeholder="First name, Last name" required>
         </li>
         <li class="mailform">
           <label for="mail"> Your Email</label>
@@ -126,7 +126,7 @@
         </li>
         <li class="messageform">
           <label>Enter message here...</label>
-          <textarea aria-label="message" maxlength="500" required></textarea>
+          <textarea id="text-area" aria-label="message" maxlength="500" required></textarea>
         </li>
         <li>
           <button type="submit" class="contact-button">Start collaboration</button>
