--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <form action="https://formspree.io/f/xgedlyrb " method="post" id="contact">
       <ul class="submitform">
         <li class="nameform">
-          <label for="first_name"> Your Name</label>
+          <label for="first-name"> Your Name</label>
           <input type="text" id="first-name" name="user_name" maxlength="30" placeholder="First name, Last name" required>
         </li>
         <li class="mailform">
