--- a/index.html
+++ b/index.html
@@ -1,152 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@300;400;500;600;800&display=swap" rel="stylesheet">
-</head>
-<body>
-  <header>
-    <nav class="navbar">
-      <a href="index.html"><img class="toolbar" src="img/shapeheader.png" alt="Redirect Home"></a>
-      <img id="btnmenu" class="rectangle" src="img/menurectangle.png" alt="Menu">
-      <ul class="desk">
-        <li><a class="navbutton" href="#hello">Hello</a></li>
-        <li><a class="navbutton" href="#portfolio">Portfolio</a></li>
-        <li><a class="navbutton" href="#about">About</a></li>
-        <li><a class="navbutton" href="#contact">Contact</a></li>
-      </ul>
-      <div id="menu">
-        <div class="exitbtn-container">
-          <img id="exitbtn" class="exit" src="img/exit.png" alt="X">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@300;400;500;600;800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar">
+        <a href="index.html"
+          ><img class="toolbar" src="img/shapeheader.png" alt="Redirect Home"
+        /></a>
+        <img
+          id="btnmenu"
+          class="rectangle"
+          src="img/menurectangle.png"
+          alt="Menu"
+        />
+        <ul class="desk">
+          <li><a class="navbutton" href="#hello">Hello</a></li>
+          <li><a class="navbutton" href="#portfolio">Portfolio</a></li>
+          <li><a class="navbutton" href="#about">About</a></li>
+          <li><a class="navbutton" href="#contact">Contact</a></li>
+        </ul>
+        <div id="menu">
+          <div class="exitbtn-container">
+            <img id="exitbtn" class="exit" src="img/exit.png" alt="X" />
+          </div>
+          <ul id="mobile-menu">
+            <li><a href="#hello">Hello</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
         </div>
-        <ul id="mobile-menu">
-          <li><a href="#hello">Hello</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
+      </nav>
+    </header>
+    <section class="hellosection" id="hello">
+      <section class="headline">
+        <h1>Marco Antonio Hincapié Montes</h1>
+        <p>
+          Hello! I am a software developer! I can help you build a product,
+          feature or website. Take a look of my works. If you like what you see
+          and have a project you need coded, don’t hesitate and contact me.
+        </p>
+        <button type="button" class="headline-button">
+          Start collaboration
+        </button>
+      </section>
+      <section class="headlineimg">
+        <img class="bottomheader" src="img/shapeheader2.png" alt="Logo" />
+        <img class="sideheader" src="img/shapeheader2.2.svg" alt="Logo" />
+      </section>
+    </section>
+    <section class="works" id="portfolio"></section>
+    <section id="popup-window" class="popup-window">
+      <div class="exitbtn-container">
+        <img id="popup-exitbtn" class="exit" src="img/exit.png" alt="X" />
       </div>
-    </nav>
-  </header>
-  <section class="hellosection" id="hello">
-    <section class="headline">
-      <h1>Marco Antonio Hincapié Montes</h1>
-      <p>Hello! I am a software developer! I can help you build a product, feature or website. Take a look of my works. If you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
-      <button type="button" class="headline-button">Start collaboration</button>
-    </section>
-    <section class="headlineimg">
-      <img class="bottomheader" src="img/shapeheader2.png" alt="Logo">
-      <img class="sideheader" src="img/shapeheader2.2.svg" alt="Logo">
-    </section>
-  </section>
-  <section class="works" id="portfolio">
-  </section>
-  <section id="popup-window" class="popup-window">
-    <div class="exitbtn-container">
-      <img id="popup-exitbtn" class="exit" src="img/exit.png" alt="X">
-    </div>
-    <h2 id="popup-title"></h2>
-    <ul class="languages" id="languages"></ul>
-    <div class="images">
-      <div class="showimg">
-        <img class="prev" id="prev" src="img/previousp.png" alt="ARROW">
-        <img class="image" id="main-img" src="img/project1.png" alt="PROJECT">
-        <img class="next" id="next" src="img/nextp.png" alt="ARROW">
+      <h2 id="popup-title"></h2>
+      <ul class="languages" id="languages"></ul>
+      <div class="images">
+        <div class="showimg">
+          <img class="prev" id="prev" src="img/previousp.png" alt="ARROW" />
+          <img class="image" id="main-img" src="#" alt="PROJECT" />
+          <img class="next" id="next" src="img/nextp.png" alt="ARROW" />
+        </div>
+        <div class="miniatures" id="miniatures"></div>
       </div>
-      <div class="miniatures" id="miniatures">
+      <p id="text"></p>
+      <div class="button-container">
+        <a
+          class="button-pop"
+          id="live"
+          href="https://antoniohincapie.github.io/My_Portfolio/"
+          >See live<img src="img/seelive.png" alt="ARROW"
+        /></a>
+        <a
+          class="button-pop"
+          id="source"
+          href="https://github.com/AntonioHincapie/My_Portfolio"
+          >See source<img src="img/ic_githubdark.png" alt="GitHub"
+        /></a>
       </div>
-    </div>
-    <p id="text"></p>
-    <div class="button-container">
-      <a class="button-pop" id="live" href="https://antoniohincapie.github.io/My_Portfolio/">See live<img src="img/seelive.png" alt="ARROW"></a>
-      <a class="button-pop" id="source" href="https://github.com/AntonioHincapie/My_Portfolio">See source<img src="img/ic_githubdark.png" alt="GitHub"></a>
-    </div>
-  </section>
-  <div id="popup-background"></div>
-  <section class="aboutme" id="about">
-    <section class="aboutheadline">
-      <h1>About</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea eiusmod</p>
-      <button type="button" class="about-button">Get my CV<img src="img/download.png" alt="Download"></button>  
     </section>
-    <ul class="tech">
-      <li class="languages1">
-        <h3>Languages</h3>
-        <ul class="position">
-          <li class="item">JavaScript (ES5/ES6)</li>
-          <li class="item">Ruby</li>
-          <li class="item">HTML</li>
-          <li class="item">CSS</li>
-        </ul>
-      </li>
-      <li class="frameworks">
-        <h3>Frameworks</h3>
-        <ul class="position">
-          <li class="item">Bootstrap</li>
-          <li class="item">Ruby on rails</li>
-          <li class="item">RSpec</li>
-          <li class="item">Capibara</li>
-          <li class="item">Selenium</li>
-        </ul>
-      </li>
-      <li class="skills">
-        <h3>Skills</h3>
-        <ul class="position">
-          <li class="item">Codekit</li>
-          <li class="item">Codepen</li>
-          <li class="item">GitHub</li>
-          <li class="item">GitLab</li>
-          <li class="item">Terminal</li>
-        </ul>
-      </li>
-      <li class="dotsquare"></li>
-    </ul>
-  </section>
-  <section class="contactform">
-    <section class="contactheadline">
-      <a href="index.html"><img class="toolbar2" src="img/shapeheader.png" alt="Redirect Home"></a>
-      <h1>Get Started</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-    </section>
-    <form action="https://formspree.io/f/xgedlyrb " method="post" id="contact">
-      <ul class="submitform">
-        <li class="nameform">
-          <label for="first-name"> Your Name</label>
-          <input type="text" id="first-name" name="user_name" maxlength="30" placeholder="First name, Last name" required>
+    <div id="popup-background"></div>
+    <section class="aboutme" id="about">
+      <section class="aboutheadline">
+        <h1>About</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ea eiusmod
+        </p>
+        <button type="button" class="about-button">
+          Get my CV<img src="img/download.png" alt="Download" />
+        </button>
+      </section>
+      <ul class="tech">
+        <li class="languages1">
+          <h3>Languages</h3>
+          <ul class="position">
+            <li class="item">JavaScript (ES5/ES6)</li>
+            <li class="item">Ruby</li>
+            <li class="item">HTML</li>
+            <li class="item">CSS</li>
+          </ul>
         </li>
-        <li class="mailform">
-          <label for="mail"> Your Email</label>
-          <input type="email" id="mail" name="user_mail" placeholder="example@gmail.com" required>
+        <li class="frameworks">
+          <h3>Frameworks</h3>
+          <ul class="position">
+            <li class="item">Bootstrap</li>
+            <li class="item">Ruby on rails</li>
+            <li class="item">RSpec</li>
+            <li class="item">Capibara</li>
+            <li class="item">Selenium</li>
+          </ul>
         </li>
-        <li class="messageform">
-          <label>Enter message here...</label>
-          <textarea id="text-area" aria-label="message" maxlength="500" required></textarea>
+        <li class="skills">
+          <h3>Skills</h3>
+          <ul class="position">
+            <li class="item">Codekit</li>
+            <li class="item">Codepen</li>
+            <li class="item">GitHub</li>
+            <li class="item">GitLab</li>
+            <li class="item">Terminal</li>
+          </ul>
+        </li>
+        <li class="dotsquare"></li>
+      </ul>
+    </section>
+    <section class="contactform">
+      <section class="contactheadline">
+        <a href="index.html"
+          ><img class="toolbar2" src="img/shapeheader.png" alt="Redirect Home"
+        /></a>
+        <h1>Get Started</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna.
+        </p>
+      </section>
+      <form
+        action="https://formspree.io/f/xgedlyrb "
+        method="post"
+        id="contact"
+      >
+        <ul class="submitform">
+          <li class="nameform">
+            <label for="first-name"> Your Name</label>
+            <input
+              type="text"
+              id="first-name"
+              name="user_name"
+              maxlength="30"
+              placeholder="First name, Last name"
+              required
+            />
+          </li>
+          <li class="mailform">
+            <label for="mail"> Your Email</label>
+            <input
+              type="email"
+              id="mail"
+              name="user_mail"
+              placeholder="example@gmail.com"
+              required
+            />
+          </li>
+          <li class="messageform">
+            <label>Enter message here...</label>
+            <textarea
+              id="text-area"
+              aria-label="message"
+              maxlength="500"
+              required
+            ></textarea>
+          </li>
+          <li>
+            <button type="submit" class="contact-button">
+              Start collaboration
+            </button>
+          </li>
+        </ul>
+        <p id="error-message">
+          Please add your e-mail in lower case to submit.
+        </p>
+      </form>
+    </section>
+    <footer class="links">
+      <button type="button" class="get-resume">
+        Get my Resume<img src="img/resume.png" alt="Resume" />
+      </button>
+      <ul class="social-network">
+        <li>
+          <a href="#"
+            ><img src="img/ic_stackoverflow.png" alt="Stackoverflow Icon"
+          /></a>
         </li>
         <li>
-          <button type="submit" class="contact-button">Start collaboration</button>
+          <a href="https://github.com/AntonioHincapie"
+            ><img src="img/ic_github.png" alt="Github Icon"
+          /></a>
+        </li>
+        <li>
+          <a href="https://twitter.com/MarcoHincapie"
+            ><img src="img/ic_twitter.png" alt="Twitter Icon"
+          /></a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/marco-hincapi%C3%A9-7a76751a3/"
+            ><img src="img/ic_linkedin.png" alt="Linkedin Icon"
+          /></a>
+        </li>
+        <li>
+          <a href="#"><img src="img/ic_medium.png" alt="Medium Icon" /></a>
+        </li>
+        <li>
+          <a href="#"><img src="img/icon.png" alt="Angellist Icon" /></a>
         </li>
       </ul>
-      <p id="error-message">Please add your e-mail in lower case to submit.</p>
-    </form>
-  </section>
-  <footer class="links">
-    <button type="button" class="get-resume">Get my Resume<img src="img/resume.png" alt="Resume"></button>
-    <ul class="social-network">
-      <li><a href="#"><img src="img/ic_stackoverflow.png" alt="Stackoverflow Icon"></a></li>
-      <li><a href="https://github.com/AntonioHincapie"><img src="img/ic_github.png" alt="Github Icon"></a></li>
-      <li><a href="https://twitter.com/MarcoHincapie"><img src="img/ic_twitter.png" alt="Twitter Icon"></a></li>
-      <li><a href="https://www.linkedin.com/in/marco-hincapi%C3%A9-7a76751a3/"><img src="img/ic_linkedin.png" alt="Linkedin Icon"></a></li>
-      <li><a href="#"><img src="img/ic_medium.png" alt="Medium Icon"></a></li>
-      <li><a href="#"><img src="img/icon.png" alt="Angellist Icon"></a></li>
-      </ul>
-  </footer>
-  <script type="module" src="./script.js"></script>
-  <script type="module" src="./projectdata.js"></script>
-</body>
+    </footer>
+    <script type="module" src="./script.js"></script>
+    <script type="module" src="./projectdata.js"></script>
+  </body>
 </html>
